syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/bariis/distributed-database/proto";

message PutRequest {
  string key = 1;
  string value = 2;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
}

service Demory {
  rpc Put(PutRequest) returns (google.protobuf.Empty){}
  rpc Get(GetRequest) returns (GetResponse){}
}